# data-room

./: .env.example  .gitignore  DOCKER_SETUP.md  GOOGLE_OAUTH_SETUP.md  QUICK_START_GOOGLE_OAUTH.md  README.md  USER_MANUAL.md  docker-compose.sh  docker-compose.yml  run-e2e-tests.sh  vercel.json
api/: index.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  auth_utils.py  config.py  models.py  pyproject.toml  requirements.txt  start-postgres.sh
backend/routes/: auth.py  datarooms.py  files.py  folders.py  search.py
ui/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  start-test-browser.sh  vite.config.ts
ui/e2e/: .gitignore  QUICKSTART.md  README.md  auth.spec.ts  dataroom.spec.ts  files.spec.ts  folders.spec.ts  search.spec.ts  tsconfig.json
ui/e2e/fixtures/: test-helpers.ts
ui/src/: App.tsx
ui/src/components/ui/: button.tsx  card.tsx  input.tsx
ui/src/contexts/: auth-context.tsx
ui/src/lib/: api.ts  utils.ts
ui/src/pages/: auth-callback-page.tsx  dashboard-page.tsx  dataroom-page.tsx  login-page.tsx
